@@ -678,12 +678,37 @@ public class ImportExportTests extends AbstractIntegrationTests {
                         attribute c : Integer = 1;
                         attribute d : Integer := 3;
                         attribute e : MyEnum default = enum1;
+                        attribute f : Real = 1.0;
+                        attribute g = 3.14;
+                        attribute h = 2.5E-10;
+                        attribute i = .5;
+                        attribute j = 1E+3;
                     }
                     enum def MyEnum {
                         enum1;
                     }
                 }""";
-        this.checker.check(input, input);
+        // We use scientific notation for real outside of range [1E-3,1E6[
+        var expected = """
+                package Occurrences {
+                    private import ScalarValues::*;
+                    occurrence def Occurrence1 {
+                        attribute a : Integer;
+                        attribute b : Integer default = 1;
+                        attribute c : Integer = 1;
+                        attribute d : Integer := 3;
+                        attribute e : MyEnum default = enum1;
+                        attribute f : Real = 1.0;
+                        attribute g = 3.14;
+                        attribute h = 2.5E-10;
+                        attribute i = 0.5;
+                        attribute j = 1000.0;
+                    }
+                    enum def MyEnum {
+                        enum1;
+                    }
+                }""";
+        this.checker.check(input, expected);
     }
 
     /**
